--- a/packages/web-components/fast-components/src/tooltip/fixtures/base.html
+++ b/packages/web-components/fast-components/src/tooltip/fixtures/base.html
@@ -11,49 +11,52 @@
 </div>
 
 <h2>Show/Hide with auto updating and lock to viewport</h2>
-<fast-tooltip
-    id="tooltip-show-1"
-    anchor="anchor-show"
-    position="top"
-    auto-update-mode="auto"
-    vertical-viewport-lock="true"
-    horizontal-viewport-lock="true"
->
-    Helpful text is helpful
-</fast-tooltip>
-<fast-tooltip
-    id="tooltip-show-2"
-    anchor="anchor-show"
-    position="right"
-    auto-update-mode="auto"
-    vertical-viewport-lock="true"
-    horizontal-viewport-lock="true"
->
-    Helpful text is helpful
-</fast-tooltip>
-<fast-tooltip
-    id="tooltip-show-3"
-    anchor="anchor-show"
-    position="bottom"
-    auto-update-mode="auto"
-    vertical-viewport-lock="true"
-    horizontal-viewport-lock="true"
->
-    Helpful text is helpful
-</fast-tooltip>
-<fast-tooltip
-    id="tooltip-show-4"
-    anchor="anchor-show"
-    position="left"
-    auto-update-mode="auto"
-    vertical-viewport-lock="true"
-    horizontal-viewport-lock="true"
->
-    Helpful text is helpful
-</fast-tooltip>
-<fast-button id="anchor-show" style="margin: 100px 200px 100px 200px;">
-    Toggle tooltips
-</fast-button>
+
+<div style="height: 400px; width: 600px; background: lightgray; overflow: scroll;">
+    <fast-tooltip
+        id="tooltip-show-1"
+        anchor="anchor-show"
+        position="top"
+        auto-update-mode="auto"
+        vertical-viewport-lock="true"
+        horizontal-viewport-lock="true"
+    >
+        Helpful text is helpful
+    </fast-tooltip>
+    <fast-tooltip
+        id="tooltip-show-2"
+        anchor="anchor-show"
+        position="right"
+        auto-update-mode="auto"
+        vertical-viewport-lock="true"
+        horizontal-viewport-lock="true"
+    >
+        Helpful text is helpful
+    </fast-tooltip>
+    <fast-tooltip
+        id="tooltip-show-3"
+        anchor="anchor-show"
+        position="bottom"
+        auto-update-mode="auto"
+        vertical-viewport-lock="true"
+        horizontal-viewport-lock="true"
+    >
+        Helpful text is helpful
+    </fast-tooltip>
+    <fast-tooltip
+        id="tooltip-show-4"
+        anchor="anchor-show"
+        position="left"
+        auto-update-mode="auto"
+        vertical-viewport-lock="true"
+        horizontal-viewport-lock="true"
+    >
+        Helpful text is helpful
+    </fast-tooltip>
+    <fast-button id="anchor-show" style="margin: 200px 300px 200px 300px;">
+        Toggle tooltips
+    </fast-button>
+</div>
 
 <h2>Fixed positions</h2>
 <div style="height: 400px; width: 400px; background: lightgray; overflow: scroll;">
