--- a/packages/web-components/fast-components/src/tooltip/fixtures/base.html
+++ b/packages/web-components/fast-components/src/tooltip/fixtures/base.html
@@ -12,7 +12,7 @@
 
 <h2>Show/Hide with auto updating and lock to viewport</h2>
 
-<div style="height: 400px; width: 600px; background: lightgray; overflow: scroll;">
+<div style="height: 400px; width: 100%; background: lightgray; overflow: scroll;">
     <fast-tooltip
         id="tooltip-show-1"
         anchor="anchor-show"
@@ -53,7 +53,7 @@
     >
         Helpful text is helpful
     </fast-tooltip>
-    <fast-button id="anchor-show" style="margin: 200px 300px 200px 300px;">
+    <fast-button id="anchor-show" style="margin: 600px 600px 600px 600px;">
         Toggle tooltips
     </fast-button>
 </div>
